Fixed: Footer Z-Index

--- a/src/index.css
+++ b/src/index.css
@@ -845,6 +845,7 @@ header {
   justify-content: space-between;
   background-color: #000;
   padding: 16px;
+  z-index: 999;
 }
 
 .footer .logo-header {
